--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Karachi
 
 title: Shaz Syed # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: A text-focused Jekyll themes # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
